--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,78 @@
-exportPattern("^[[:alpha:]]+")
+export(add.errorbars)
+export(barplot.getx)
+export(barplot.gety)
+export(barplot.stratum)
+export(calc.CAT)
+export(colour.step)
+export(colour2hex)
+export(colour2rgb)
+export(colours.hex)
+export(colours.mjc)
+export(colours.rgb)
+export(density.peak)
+export(density.sketch)
+export(dev.off)
+export(errorbarplot)
+export(get.density.peaks)
+export(hex2colour)
+export(hex2rgb)
+export(image.table)
+export(inverse.colour)
+export(is.colour)
+export(is.hex.colour)
+export(is.rgb.colour)
+export(jpeg)
+export(jpeg.QSXGA)
+export(jpeg.QUXGA)
+export(jpeg.QVGA)
+export(jpeg.QXGA)
+export(jpeg.SVGA)
+export(jpeg.SXGA)
+export(jpeg.UXGA)
+export(jpeg.VGA)
+export(jpeg.XGA)
+export(pairs.cor)
+export(panel.cor)
+export(panel.lm)
+export(pdf)
+export(pdf.A4)
+export(pdf.A4.portrait)
+export(pdf.A5)
+export(plot.CAT)
+export(plot.CAT.vs.random)
+export(plot.blank)
+export(plot.cor)
+export(plot.density.matrix)
+export(plot.matrix)
+export(plot.mean.vs.sd)
+export(plot.mean.vs.var)
+export(plot.pch)
+export(plot.rank.vs.sd)
+export(plot.venn)
+export(plot.venn2D)
+export(plot.venn3D)
+export(plot2)
+export(png)
+export(png.QSXGA)
+export(png.QUXGA)
+export(png.QVGA)
+export(png.QXGA)
+export(png.SVGA)
+export(png.SXGA)
+export(png.UXGA)
+export(png.VGA)
+export(png.XGA)
+export(rgb2colour)
+export(rgb2hex)
+export(vennDiagram2)
+export(xyplot.hist)
+import(mjcbase)
+importFrom(gplots,redblue)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,jpeg)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(graphics,image)
+importFrom(gtools,permute)
+importFrom(limma,vennCounts)
+importFrom(stats,density)
