gained from pwbc: 'hgrid.R' 'vgrid.R' 'auto.mfrow.R' 'axis.percentiles.R' 'hist.int.R' 'pvalue.stars.R' 'rect.hclust.labels.R'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 export(add.errorbars)
+export(auto.mfrow)
+export(axis.percentiles)
+export(axis.quartiles)
 export(barplot.getx)
 export(barplot.gety)
 export(barplot.stratum)
@@ -16,6 +19,8 @@ export(errorbarplot)
 export(get.density.peaks)
 export(hex2colour)
 export(hex2rgb)
+export(hgrid)
+export(hist.int)
 export(image.table)
 export(inverse.colour)
 export(is.colour)
@@ -62,9 +67,12 @@ export(png.SXGA)
 export(png.UXGA)
 export(png.VGA)
 export(png.XGA)
+export(pvalue.stars)
+export(rect.hclust.labels)
 export(rgb2colour)
 export(rgb2hex)
 export(vennDiagram2)
+export(vgrid)
 export(xyplot.hist)
 import(mjcbase)
 importFrom(gplots,redblue)
