--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mjcgraphics
-Version: 1.0.0
+Version: 1.0.1
 Date: 2012-07-17
 Title: mjc's graphics library
 Author: Mark Cowley <m.cowley@garvan.org.au>
@@ -30,6 +30,13 @@ Collate:
     'plotting.devices.R'
     'xyplot.hist.R'
     'colours.R'
+    'hgrid.R'
+    'vgrid.R'
+    'auto.mfrow.R'
+    'axis.percentiles.R'
+    'hist.int.R'
+    'pvalue.stars.R'
+    'rect.hclust.labels.R'
 Imports:
     gplots,
     grDevices,
