moved from pwbc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(plot.mean.vs.sd)
 export(plot.mean.vs.var)
 export(plot.pch)
 export(plot.rank.vs.sd)
+export(plot.rho)
 export(plot.venn)
 export(plot.venn2D)
 export(plot.venn3D)
@@ -71,8 +72,11 @@ export(pvalue.stars)
 export(rect.hclust.labels)
 export(rgb2colour)
 export(rgb2hex)
+export(safe.brewer.pal)
+export(stripchart_annot)
 export(vennDiagram2)
 export(vgrid)
+export(wrap.title)
 export(xyplot.hist)
 import(mjcbase)
 importFrom(gplots,redblue)
