refactored plot.CAT* -> catplot* added grid.percentiles, grid.quantiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(barplot.getx)
 export(barplot.gety)
 export(barplot.stratum)
 export(calc.CAT)
+export(catplot)
+export(catplot.vs.random)
 export(colour.step)
 export(colour2hex)
 export(colour2rgb)
@@ -17,6 +19,8 @@ export(density.sketch)
 export(dev.off)
 export(errorbarplot)
 export(get.density.peaks)
+export(grid.percentiles)
+export(grid.quartiles)
 export(hex2colour)
 export(hex2rgb)
 export(hgrid)
@@ -43,8 +47,6 @@ export(pdf)
 export(pdf.A4)
 export(pdf.A4.portrait)
 export(pdf.A5)
-export(plot.CAT)
-export(plot.CAT.vs.random)
 export(plot.blank)
 export(plot.cor)
 export(plot.density.matrix)
