--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mjcgraphics
-Version: 1.0.1
-Date: 2012-07-18
+Version: 1.0.2
+Date: 2012-07-24
 Title: mjc's graphics library
 Author: Mark Cowley <m.cowley@garvan.org.au>
 Maintainer: Mark Cowley <m.cowley@garvan.org.au>
@@ -18,7 +18,6 @@ Collate:
     'multiHeatmap.R'
     'pairs.cor.R'
     'plot.blank.R'
-    'plot.CAT.R'
     'plot.cor.R'
     'plot.density.matrix.R'
     'plot.matrix.R'
@@ -41,6 +40,8 @@ Collate:
     'wrap.title.R'
     'safe.brewer.pal.R'
     'stripchart_annot.R'
+    'catplot.R'
+    'grid.percentiles.R'
 Imports:
     gplots,
     grDevices,
