added comboplot_scatter_boxplot added plot.ExpressionSet renamed many methods for S3 consistency added explicit imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,14 @@
+S3method(comboplot_scatter_boxplot,ExpressionSet)
+S3method(comboplot_scatter_boxplot,default)
+S3method(comboplot_scatter_boxplot,numeric)
+S3method(plot,ExpressionSet)
 export(add.errorbars)
 export(auto.mfrow)
 export(axis.percentiles)
 export(axis.quartiles)
 export(barplot.getx)
 export(barplot.gety)
-export(barplot.stratum)
+export(barplot_stratum)
 export(calc.CAT)
 export(catplot)
 export(catplot.vs.random)
@@ -14,11 +18,12 @@ export(colour2rgb)
 export(colours.hex)
 export(colours.mjc)
 export(colours.rgb)
-export(density.peak)
+export(comboplot_scatter_boxplot)
 export(density.sketch)
+export(density_peak)
 export(dev.off)
 export(errorbarplot)
-export(get.density.peaks)
+export(get_density_peaks)
 export(grid.percentiles)
 export(grid.quartiles)
 export(hex2colour)
@@ -31,6 +36,7 @@ export(is.colour)
 export(is.hex.colour)
 export(is.rgb.colour)
 export(jpeg)
+export(jpeg.Apple27)
 export(jpeg.QSXGA)
 export(jpeg.QUXGA)
 export(jpeg.QVGA)
@@ -47,20 +53,22 @@ export(pdf)
 export(pdf.A4)
 export(pdf.A4.portrait)
 export(pdf.A5)
-export(plot.blank)
+export(pdf.Apple27)
 export(plot.cor)
 export(plot.density.matrix)
 export(plot.matrix)
-export(plot.mean.vs.sd)
-export(plot.mean.vs.var)
-export(plot.pch)
-export(plot.rank.vs.sd)
-export(plot.rho)
 export(plot.venn)
 export(plot.venn2D)
 export(plot.venn3D)
 export(plot2)
+export(plot_blank)
+export(plot_mean_vs_sd)
+export(plot_mean_vs_var)
+export(plot_pch)
+export(plot_rank_vs_sd)
+export(plot_rho)
 export(png)
+export(png.Apple27)
 export(png.QSXGA)
 export(png.QUXGA)
 export(png.QVGA)
@@ -80,7 +88,11 @@ export(vennDiagram2)
 export(vgrid)
 export(wrap.title)
 export(xyplot.hist)
-import(mjcbase)
+exportMethods(plot)
+importClassesFrom(Biobase,ExpressionSet)
+importFrom(Biobase,exprs)
+importFrom(Biobase,featureNames)
+importFrom(Biobase,sampleNames)
 importFrom(gplots,redblue)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
@@ -89,4 +101,5 @@ importFrom(grDevices,png)
 importFrom(graphics,image)
 importFrom(gtools,permute)
 importFrom(limma,vennCounts)
-importFrom(stats,density)
+importFrom(stats,lowess)
+importMethodsFrom(lumi,plot)
