--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,6 @@
 S3method(comboplot_scatter_boxplot,ExpressionSet)
 S3method(comboplot_scatter_boxplot,default)
 S3method(comboplot_scatter_boxplot,numeric)
-S3method(plot,ExpressionSet)
 export(add.errorbars)
 export(auto.mfrow)
 export(axis.percentiles)
@@ -61,6 +60,7 @@ export(plot.venn)
 export(plot.venn2D)
 export(plot.venn3D)
 export(plot2)
+export(plot_ExpressionSet)
 export(plot_blank)
 export(plot_mean_vs_sd)
 export(plot_mean_vs_var)
@@ -88,6 +88,7 @@ export(vennDiagram2)
 export(vgrid)
 export(wrap.title)
 export(xyplot.hist)
+exportMethods(dotplot)
 exportMethods(plot)
 importClassesFrom(Biobase,ExpressionSet)
 importFrom(Biobase,exprs)
